--- a/SequencedComponentsPOC.qsf
+++ b/SequencedComponentsPOC.qsf
@@ -65,4 +65,6 @@ set_location_assignment PIN_88 -to POWER
 set_global_assignment -name QIP_FILE Internal_Oscillator/synthesis/Internal_Oscillator.qip
 set_global_assignment -name SOURCE_FILE .gitignore
 set_global_assignment -name VHDL_FILE SequencedComponentsPOC.vhd
+set_location_assignment PIN_89 -to DATA_INPUT
+set_location_assignment PIN_21 -to INTERNAL_LED_0
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
