--- a/SequencedComponentsPOC.qsf
+++ b/SequencedComponentsPOC.qsf
@@ -70,4 +70,16 @@ set_location_assignment PIN_21 -to INTERNAL_LED_0
 set_global_assignment -name VHDL_FILE output_files/SlowClockGenerator.vhd
 set_location_assignment PIN_22 -to INTERNAL_LED_1
 set_location_assignment PIN_24 -to INTERNAL_LED_2
+set_global_assignment -name VHDL_FILE D_Latch.vhd
+set_global_assignment -name VHDL_FILE Edge_Triggered_Flip_Flop.vhd
+set_global_assignment -name VHDL_FILE Two_To_One_Mux.vhd
+set_global_assignment -name VHDL_FILE Eight_Bit_Register.vhd
+set_global_assignment -name VHDL_FILE One_Bit_Adder.vhd
+set_global_assignment -name VHDL_FILE ADD_Component.vhd
+set_global_assignment -name VHDL_FILE Eight_Bit_Tristate_Buffer.vhd
+set_location_assignment PIN_25 -to INTERNAL_LED_3
+set_location_assignment PIN_32 -to INTERNAL_LED_4
+set_location_assignment PIN_33 -to INTERNAL_LED_5
+set_location_assignment PIN_38 -to INTERNAL_LED_6
+set_location_assignment PIN_39 -to INTERNAL_LED_7
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
