--- a/SequencedComponentsPOC.qsf
+++ b/SequencedComponentsPOC.qsf
@@ -82,4 +82,5 @@ set_location_assignment PIN_32 -to INTERNAL_LED_4
 set_location_assignment PIN_33 -to INTERNAL_LED_5
 set_location_assignment PIN_38 -to INTERNAL_LED_6
 set_location_assignment PIN_39 -to INTERNAL_LED_7
+set_global_assignment -name VHDL_FILE Full_Adder.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
