--- a/SequencedComponentsPOC.qsf
+++ b/SequencedComponentsPOC.qsf
@@ -83,4 +83,5 @@ set_location_assignment PIN_38 -to INTERNAL_LED_6
 set_location_assignment PIN_39 -to INTERNAL_LED_7
 set_global_assignment -name VHDL_FILE Full_Adder.vhd
 set_location_assignment PIN_89 -to RESET
+set_global_assignment -name VHDL_FILE Two_To_One_Byte_Mux.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
